snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/error-0.3.0-20210927.134351-1.module.sha512
4f547bc31d33bc07fca61c8a68c0b012e7f39b22a84552ec48e708181681640693d18db4639b81f81dc93bf4b71929560e89bccc2b242ed7aa795892547f63f4